--- a/.obsidian/appearance.json
+++ b/.obsidian/appearance.json
@@ -7,5 +7,8 @@
   "monospaceFontFamily": "CaskaydiaCove Nerd Font Mono",
   "baseFontSize": 14,
   "showRibbon": true,
-  "theme": "obsidian"
+  "theme": "obsidian",
+  "enabledCssSnippets": [
+    "style"
+  ]
 }
